[package]
authors = ["Casey Primozic <me@ameo.link>"]
name = "snapmeo"
version = "0.1.0"

[dependencies]
chrono = "0.4.3"
clap = "2.31.2"
clipboard = "0.4.6"
colored = "1.6.0"
repng = "0.2.2"
reqwest = "0.8.6"
scrap = "0.5.0"

[dependencies.sdl2]
features = ["image"]
version = "0.31.0"

[profile.release]
opt-level=3
lto=true
debug = false
